--- a/Bonobo.Git.Server/App_GlobalResources/Resources.resx
+++ b/Bonobo.Git.Server/App_GlobalResources/Resources.resx
@@ -957,6 +957,12 @@ The regular C# string formatting rules apply: To get {} in your link you need to
   <data name="Settings_Global_SiteCssUrl_Hint" xml:space="preserve">
     <value>URL to a CSS file to use for the site.  Site-relative (~) paths are supported.</value>
   </data>
+  <data name="Repository_Detail_AreRegexLinksVisible" xml:space="preserve">
+    <value>Show Links</value>
+  </data>
+  <data name="Settings_Global_AreRegexLinksVisible" xml:space="preserve">
+    <value>Show link regex and URL in Repository Browser</value>
+  </data>
   <data name="Repository_Layout_Code" xml:space="preserve">
     <value>Code</value>
   </data>
