--- a/Bonobo.Git.Server/App_GlobalResources/Resources.resx
+++ b/Bonobo.Git.Server/App_GlobalResources/Resources.resx
@@ -987,4 +987,22 @@ The regular C# string formatting rules apply: To get {} in your link you need to
   <data name="SA_PassLastUpdated" xml:space="preserve">
     <value>PassLastUpdated</value>
   </data>
+  <data name="Depen" xml:space="preserve">
+    <value>Dependencies</value>
+  </data>
+  <data name="Depen_Add" xml:space="preserve">
+    <value>Add Dependencies</value>
+  </data>
+  <data name="Depen_DateUpdated" xml:space="preserve">
+    <value>DateUpdated</value>
+  </data>
+  <data name="Depen_Delete" xml:space="preserve">
+    <value>Delete Dependencies</value>
+  </data>
+  <data name="Depen_ID" xml:space="preserve">
+    <value>Id</value>
+  </data>
+  <data name="Depen_VersionInUse" xml:space="preserve">
+    <value>VersionInUse</value>
+  </data>
 </root>
