--- a/Bonobo.Git.Server/App_GlobalResources/Resources.resx
+++ b/Bonobo.Git.Server/App_GlobalResources/Resources.resx
@@ -979,13 +979,13 @@ The regular C# string formatting rules apply: To get {} in your link you need to
     <value>Id</value>
   </data>
   <data name="SA_InPassManager" xml:space="preserve">
-    <value>InPassManager</value>
+    <value>Password Manager</value>
   </data>
   <data name="SA_Name" xml:space="preserve">
-    <value>ServiceAccountName</value>
+    <value>Name</value>
   </data>
   <data name="SA_PassLastUpdated" xml:space="preserve">
-    <value>PassLastUpdated</value>
+    <value>Last Updated </value>
   </data>
   <data name="Dependencies" xml:space="preserve">
     <value>Dependencies</value>
