--- a/Bonobo.Git.Server/App_GlobalResources/Resources.resx
+++ b/Bonobo.Git.Server/App_GlobalResources/Resources.resx
@@ -984,6 +984,9 @@ The regular C# string formatting rules apply: To get {} in your link you need to
   <data name="ServiceAccount_Name" xml:space="preserve">
     <value>Name</value>
   </data>
+	<data name="ServiceAccount_Empty_Name" xml:space="preserve">
+    <value>The service account name cannot be empty</value>
+  </data>
   <data name="ServiceAccount_PassLastUpdated" xml:space="preserve">
     <value>Password Last Updated </value>
   </data>
@@ -1007,6 +1010,9 @@ The regular C# string formatting rules apply: To get {} in your link you need to
   </data>
   <data name="Known_Dependency_Name" xml:space="preserve">
     <value>ComponentName</value>
+  </data>
+  <data name="Known_Dependency_Empty_Name" xml:space="preserve">
+    <value>The dependency name cannot be empty</value>
   </data>
   <data name="ServiceAccount_InPassManager_False" xml:space="preserve">
     <value>Not In Password Manager</value>
